Convert from British-style quotation to American style

--- a/src/epub/text/act-1.xhtml
+++ b/src/epub/text/act-1.xhtml
@@ -425,7 +425,7 @@
 									<br/>
 									<span>That he’s revengeful, and I know his sword</span>
 									<br/>
-									<span>Hath a sharp edge: it’s long and, ‘t may be said,</span>
+									<span>Hath a sharp edge: it’s long and, “t may be said,</span>
 									<br/>
 									<span>It reaches far, and where ’twill not extend,</span>
 									<br/>
@@ -605,7 +605,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Norfolk</td>
-							<td>Say not ‘treasonous.’</td>
+							<td>Say not “treasonous.”</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Buckingham</td>
@@ -649,7 +649,7 @@
 									<br/>
 									<span>As himself pleased; and they were ratified</span>
 									<br/>
-									<span>As he cried ‘Thus let be’: to as much end</span>
+									<span>As he cried “Thus let be”: to as much end</span>
 									<br/>
 									<span>As give a crutch to the dead: but our count-cardinal</span>
 									<br/>
@@ -907,7 +907,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">A noise within, crying ‘Room for the Queen!’ Enter <b epub:type="z3998:persona">Queen Katherine</b>, ushered by <b epub:type="z3998:persona">Norfolk</b>, and <b epub:type="z3998:persona">Suffolk</b>: she kneels. <b epub:type="z3998:persona">King Henry VIII</b> riseth from his state, takes her up, kisses and placeth her by him.</i>
+								<i epub:type="z3998:stage-direction">A noise within, crying “Room for the Queen!” Enter <b epub:type="z3998:persona">Queen Katherine</b>, ushered by <b epub:type="z3998:persona">Norfolk</b>, and <b epub:type="z3998:persona">Suffolk</b>: she kneels. <b epub:type="z3998:persona">King Henry VIII</b> riseth from his state, takes her up, kisses and placeth her by him.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1254,7 +1254,7 @@
 									<br/>
 									<span>Than ever they were fair. This man so complete,</span>
 									<br/>
-									<span>Who was enroll’d ‘mongst wonders, and when we,</span>
+									<span>Who was enroll’d “mongst wonders, and when we,</span>
 									<br/>
 									<span>Almost with ravish’d listening, could not find</span>
 									<br/>
@@ -1404,9 +1404,9 @@
 									<br/>
 									<span>’Twould prove the verity of certain words</span>
 									<br/>
-									<span>Spoke by a holy monk; ‘that oft,’ says he,</span>
+									<span>Spoke by a holy monk; “that oft,” says he,</span>
 									<br/>
-									<span>‘Hath sent to me, wishing me to permit</span>
+									<span>“Hath sent to me, wishing me to permit</span>
 									<br/>
 									<span>John de la Car, my chaplain, a choice hour</span>
 									<br/>
@@ -1424,9 +1424,9 @@
 									<br/>
 									<span>Tell you the duke, shall prosper: bid him strive</span>
 									<br/>
-									<span>To gain the love o’ the commonalty: the duke</span>
+									<span>To gain the love o” the commonalty: the duke</span>
 									<br/>
-									<span>Shall govern England.’</span>
+									<span>Shall govern England.”</span>
 								</p>
 							</td>
 						</tr>
@@ -1472,9 +1472,9 @@
 									<br/>
 									<span>It forged him some design, which, being believed,</span>
 									<br/>
-									<span>It was much like to do: he answer’d, ‘Tush,</span>
+									<span>It was much like to do: he answer’d, “Tush,</span>
 									<br/>
-									<span>It can do me no damage;’ adding further,</span>
+									<span>It can do me no damage;” adding further,</span>
 									<br/>
 									<span>That, had the king in his last sickness fail’d,</span>
 									<br/>
@@ -1530,7 +1530,7 @@
 							<td epub:type="z3998:persona">Surveyor</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>‘If,’ quoth he, ‘I for this had been committed,</span>
+									<span>“If,” quoth he, “I for this had been committed,</span>
 									<br/>
 									<span>As, to the Tower, I thought, I would have play’d</span>
 									<br/>
@@ -1542,7 +1542,7 @@
 									<br/>
 									<span>As he made semblance of his duty, would</span>
 									<br/>
-									<span>Have put his knife to him.’</span>
+									<span>Have put his knife to him.”</span>
 								</p>
 							</td>
 						</tr>
@@ -1572,7 +1572,7 @@
 							<td epub:type="z3998:persona">Surveyor</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>After ‘the duke his father,’ with ‘the knife,’</span>
+									<span>After “the duke his father,” with “the knife,”</span>
 									<br/>
 									<span>He stretch’d him, and, with one hand on his dagger,</span>
 									<br/>
@@ -1600,7 +1600,7 @@
 									<br/>
 									<span>Find mercy in the law, ’tis his: if none,</span>
 									<br/>
-									<span>Let him not seek ‘t of us: by day and night,</span>
+									<span>Let him not seek “t of us: by day and night,</span>
 									<br/>
 									<span>He’s traitor to the height. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
@@ -1653,7 +1653,7 @@
 									<br/>
 									<span>Have got by the late voyage is but merely</span>
 									<br/>
-									<span>A fit or two o’ the face; but they are shrewd ones;</span>
+									<span>A fit or two o” the face; but they are shrewd ones;</span>
 									<br/>
 									<span>For when they hold ’em, you would swear directly</span>
 									<br/>
@@ -1767,7 +1767,7 @@
 									<br/>
 									<span>Or pack to their old playfellows: there, I take it,</span>
 									<br/>
-									<span>They may, ‘cum privilegio,’ wear away</span>
+									<span>They may, “cum privilegio,” wear away</span>
 									<br/>
 									<span>The lag end of their lewdness and be laugh’d at.</span>
 								</p>
