--- a/src/epub/text/act-2.xhtml
+++ b/src/epub/text/act-2.xhtml
@@ -295,7 +295,7 @@
 									<br/>
 									<span>The law I bear no malice for my death;</span>
 									<br/>
-									<span>‘T has done, upon the premises, but justice:</span>
+									<span>“T has done, upon the premises, but justice:</span>
 									<br/>
 									<span>But those that sought it I could wish more Christians:</span>
 									<br/>
@@ -325,7 +325,7 @@
 									<br/>
 									<span>Make of your prayers one sweet sacrifice,</span>
 									<br/>
-									<span>And lift my soul to heaven. Lead on, o’ God’s name.</span>
+									<span>And lift my soul to heaven. Lead on, o” God’s name.</span>
 								</p>
 							</td>
 						</tr>
@@ -646,7 +646,7 @@
 							<td epub:type="z3998:persona">Chamberlain</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>‘My lord, the horses your lordship sent for, with all the care I had, I saw well chosen, ridden, and furnished. They were young and handsome, and of the best breed in the north. When they were ready to set out for London, a man of my lord cardinal’s, by commission and main power, took ’em from me; with this reason: His master would be served before a subject, if not before the king; which stopped our mouths, sir.’</span>
+									<span>“My lord, the horses your lordship sent for, with all the care I had, I saw well chosen, ridden, and furnished. They were young and handsome, and of the best breed in the north. When they were ready to set out for London, a man of my lord cardinal’s, by commission and main power, took ’em from me; with this reason: His master would be served before a subject, if not before the king; which stopped our mouths, sir.”</span>
 									<br/>
 									<span>I fear he will indeed: well, let him have them:</span>
 									<br/>
@@ -1385,7 +1385,7 @@
 									<br/>
 									<span>For more than blushing comes to: if your back</span>
 									<br/>
-									<span>Cannot vouchsafe this burthen,’tis too weak</span>
+									<span>Cannot vouchsafe this burthen,”tis too weak</span>
 									<br/>
 									<span>Ever to get a boy.</span>
 								</p>
@@ -1980,7 +1980,7 @@
 									<br/>
 									<span>Before you all, appeal unto the pope,</span>
 									<br/>
-									<span>To bring my whole cause ‘fore his holiness,</span>
+									<span>To bring my whole cause “fore his holiness,</span>
 									<br/>
 									<span>And to be judged by him. <i epub:type="z3998:stage-direction">She curtsies to <b epub:type="z3998:persona">King Henry VIII</b>, and offers to depart.</i></span>
 								</p>
@@ -2036,7 +2036,7 @@
 								<p>
 									<span>Go thy ways, Kate:</span>
 									<br/>
-									<span>That man i’ the world who shall report he has</span>
+									<span>That man i” the world who shall report he has</span>
 									<br/>
 									<span>A better wife, let him in nought be trusted,</span>
 									<br/>
