--- a/src/epub/text/act-3.xhtml
+++ b/src/epub/text/act-3.xhtml
@@ -770,11 +770,11 @@
 									<br/>
 									<span>To stay the judgment o’ the divorce; for if</span>
 									<br/>
-									<span>It did take place, ‘I do,’ quoth he, ‘perceive</span>
+									<span>It did take place, “I do,” quoth he, “perceive</span>
 									<br/>
 									<span>My king is tangled in affection to</span>
 									<br/>
-									<span>A creature of the queen’s, Lady Anne Bullen.’</span>
+									<span>A creature of the queen’s, Lady Anne Bullen.”</span>
 								</p>
 							</td>
 						</tr>
@@ -1486,7 +1486,7 @@
 									<br/>
 									<span>A way, if it take right, in spite of fortune</span>
 									<br/>
-									<span>Will bring me off again. What’s this? ‘To the Pope!’</span>
+									<span>Will bring me off again. What’s this? “To the Pope!”</span>
 									<br/>
 									<span>The letter, as I live, with all the business</span>
 									<br/>
@@ -1776,7 +1776,7 @@
 									<br/>
 									<span>Some of these articles; and out they shall.</span>
 									<br/>
-									<span>Now, if you can blush and cry ‘guilty,’ cardinal,</span>
+									<span>Now, if you can blush and cry “guilty,” cardinal,</span>
 									<br/>
 									<span>You’ll show a little honesty.</span>
 								</p>
@@ -1814,7 +1814,7 @@
 								<p>
 									<span>Then, that in all you writ to Rome, or else</span>
 									<br/>
-									<span>To foreign princes, ‘Ego et Rex meus’</span>
+									<span>To foreign princes, “Ego et Rex meus’</span>
 									<br/>
 									<span>Was still inscribed; in which you brought the king</span>
 									<br/>
