--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -425,7 +425,7 @@
 									<br/>
 									<span>And make ’em reel before ’em. No man living</span>
 									<br/>
-									<span>Could say ‘This is my wife’ there; all were woven</span>
+									<span>Could say “This is my wife” there; all were woven</span>
 									<br/>
 									<span>So strangely in one piece.</span>
 								</p>
@@ -459,7 +459,7 @@
 									<br/>
 									<span>With all the choicest music of the kingdom,</span>
 									<br/>
-									<span>Together sung ‘Te Deum.’ So she parted,</span>
+									<span>Together sung “Te Deum.” So she parted,</span>
 									<br/>
 									<span>And with the same full state paced back again</span>
 									<br/>
@@ -676,13 +676,13 @@
 									<br/>
 									<span>With all his covent, honourably received him;</span>
 									<br/>
-									<span>To whom he gave these words, ‘O, father abbot,</span>
+									<span>To whom he gave these words, “O, father abbot,</span>
 									<br/>
 									<span>An old man, broken with the storms of state,</span>
 									<br/>
 									<span>Is come to lay his weary bones among ye;</span>
 									<br/>
-									<span>Give him a little earth for charity!’</span>
+									<span>Give him a little earth for charity!”</span>
 									<br/>
 									<span>So went to bed; where eagerly his sickness</span>
 									<br/>
