--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -806,7 +806,7 @@
 									<br/>
 									<span>Wait else at door, a fellow-counsellor,</span>
 									<br/>
-									<span>‘Mong boys, grooms, and lackeys. But their pleasures</span>
+									<span>“Mong boys, grooms, and lackeys. But their pleasures</span>
 									<br/>
 									<span>Must be fulfill’d, and I attend with patience.</span>
 								</p>
@@ -832,7 +832,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">King Henry VIII</td>
-							<td>Body o’ me, where is it?</td>
+							<td>Body o” me, where is it?</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Doctor Butts</td>
@@ -842,7 +842,7 @@
 									<br/>
 									<span>The high promotion of his grace of Canterbury;</span>
 									<br/>
-									<span>Who holds his state at door, ‘mongst pursuivants,</span>
+									<span>Who holds his state at door, “mongst pursuivants,</span>
 									<br/>
 									<span>Pages, and footboys.</span>
 								</p>
@@ -1261,7 +1261,7 @@
 									<br/>
 									<span>Would you expect? you are strangely troublesome.</span>
 									<br/>
-									<span>Let some o’ the guard be ready there.</span>
+									<span>Let some o” the guard be ready there.</span>
 								</p>
 							</td>
 						</tr>
@@ -1567,9 +1567,9 @@
 									<br/>
 									<span>The common voice, I see, is verified</span>
 									<br/>
-									<span>Of thee, which says thus, ‘Do my Lord of Canterbury</span>
+									<span>Of thee, which says thus, “Do my Lord of Canterbury</span>
 									<br/>
-									<span>A shrewd turn, and he is your friend for ever.’</span>
+									<span>A shrewd turn, and he is your friend for ever.”</span>
 									<br/>
 									<span>Come, lords, we trifle time away; I long</span>
 									<br/>
@@ -1750,7 +1750,7 @@
 									<br/>
 									<span>combustion in the state. I missed the meteor once,</span>
 									<br/>
-									<span>and hit that woman; who cried out ‘Clubs!’ when I</span>
+									<span>and hit that woman; who cried out “Clubs!” when I</span>
 									<br/>
 									<span>might see from far some forty truncheoners draw to</span>
 									<br/>
