--- a/src/epub/text/epilogue.xhtml
+++ b/src/epub/text/epilogue.xhtml
@@ -24,7 +24,7 @@
 								<br/>
 								<span>They’ll say ’tis naught: others, to hear the city</span>
 								<br/>
-								<span>Abused extremely, and to cry ‘That’s witty!’</span>
+								<span>Abused extremely, and to cry “That’s witty!”</span>
 								<br/>
 								<span>Which we have not done neither: that, I fear,</span>
 								<br/>
